--- a/html/index.html
+++ b/html/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Supanut Maneeyot</h1>
-    <img src ="../ตัวตึง.jpg">
+    <img src ="../html/ตัวตึง.jpg">
 </body>
 </html>
