--- a/html/index.html
+++ b/html/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Deploy prod</h1>
     <h1>Supanut Maneeyot</h1>
-    <img src ="../html/ตัวตึง.jpg">
+    <img src ="ตัวตึง.jpg">
 </body>
 </html>
