--- a/html/index.html
+++ b/html/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Deploy prod</h1>
     <h1>Supanut Maneeyot</h1>
-    <img src ="ตัวตึง.jpg">
+    <img src ="https://agfstorage.blob.core.windows.net/misc/FP_com/2021/02/03/Misc.jpg">
 </body>
 </html>
