--- a/html/index.html
+++ b/html/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Supanut Maneeyot</h1>
-    <img src ="../html/ตัวตึง.jpg">
+    <img src ="https://agfstorage.blob.core.windows.net/misc/FP_com/2021/02/03/Misc.jpg">
 </body>
 </html>
